2008-02-01  Joerg Jaspert  <joerg@debian.org>

	* rails/app/views/submission/_person_availability.rxml: Show real
	dates and date names

	* rails/app/views/pentabarf/_person_travel.rxml: Select only items
	for the current conference

	* rails/app/views/submission/_sidebar.rxml: s/Person/Registration detail/
	Add /Paper

	* rails/app/views/submission/_person_general.rxml: wording fixes
	Select only items for the current conference

2008-01-31  Joerg Jaspert  <joerg@debian.org>

	* rails/app/views/pentabarf/_person_travel.rxml: Hide
	arrival_to/departure_to fields
	Add travel_from_venue checkbox

	* rails/app/views/submission/_person_travel.rxml: Make arrival be
	on top of departure
	Hide arrival_to/departure_to fields
	Add travel_from_venue checkbox

	* rails/app/views/submission/_person_general.rxml: Select only food
	options for current conference

	* rails/app/views/pentabarf/_person_general.rxml: Select only food
	options for current conference

2008-01-30  Joerg Jaspert  <joerg@debian.org>

	* rails/app/views/submission/_person_travel.rxml: Added JS check
	stuff for dates

2008-01-29  Joerg Jaspert  <joerg@debian.org>

	* rails/public/javascripts/application.js: Add date check JS

	* rails/lib/builder_helper.rb (Builder_helper::date_button_row):
	pass options, but hardcode :size in them.

	* rails/app/views/submission/_person_general.rxml: Add various
	javascript hooks and a span for the debcamp check.

	* rails/app/views/submission/person.rxml: Use the _person buttons.
	Add call to date check js

	* rails/app/views/submission/_modification_buttons_person.rxml:
	Added, copied from _modification_buttons_person.rxml.
	Add form validation JS thingie into submit button

2008-01-28  Joerg Jaspert  <joerg@debian.org>

	* rails/app/views/submission/person.rxml: restructure tabs a bit

	* rails/app/views/submission/_person_travel.rxml: Add
	"travel_to_venue" checkbox
	move accom fields to _general.rxml

	* rails/app/views/pentabarf/_person_travel.rxml: Add