@@ -1,3 +1,9 @@
+2008-02-02  Joerg Jaspert  <joerg@debian.org>
+
+	* rails/config/routes.rb: Place it all below /penta/
+
+	* rails/app/views/layouts/submission.rxml: use title instead of acronym
+
 2008-02-01  Joerg Jaspert  <joerg@debian.org>
 
 	* rails/app/views/submission/_person_availability.rxml: Show real
